# models/m_groupMember.go
@@ -1,7 +1,6 @@
 package models
 
 import (
-	"fmt"
 	"time"
 
 	"github.com/astaxie/beego/orm"
@@ -10,7 +9,7 @@ import (
 /*SysGroupMember 群组成员 */
 type SysGroupMember struct {
 	Id         int       `orm:"auto" json:"id" required:"false" description:"id"`
-	UserId     int       `json:"userId" required:"false" description:"成员id(用户id)"`
+	User       *SysUser  `orm:"rel(fk)" json:"user" required:"false" description:"群组成员"`
 	Group      *SysGroup `orm:"rel(fk)" json:"group" required:"false" description:"组信息"`
 	CreateTime time.Time `orm:"auto_now_add;type(datetime)" json:"createTime" required:"false" description:"创建时间"`
 }
@@ -24,12 +23,15 @@ func init() {
 /*AddGroupMember 新增群成员*/
 func AddGroupMember(group *SysGroupMember) int64 {
 	formData := SysGroupMember{}
-	formData.UserId = group.UserId
 	o := orm.NewOrm()
 	// 多对一关系插入
+	fkUser := SysUser{
+		Id: group.User.Id,
+	}
 	fkGroup := SysGroup{
 		Id: group.Group.Id,
 	}
+	formData.User = &fkUser
 	formData.Group = &fkGroup
 	if created, id, err := o.ReadOrCreate(&formData, "user_id", "group_id"); err == nil {
 		if created {
@@ -43,7 +45,26 @@ func AddGroupMember(group *SysGroupMember) int64 {
 func GetGroupMember(group *SysGroupMember) []SysGroupMember {
 	var groupList []SysGroupMember
 	o := orm.NewOrm()
-	o.QueryTable("sys_group_member").Filter("user_id", group.UserId).RelatedSel().All(&groupList)
-	fmt.Println(groupList)
+	o.QueryTable("sys_group_member").Filter("user_id", group.User.Id).RelatedSel().All(&groupList)
 	return groupList
+}
+
+/*GetGroupUser 获取群成员*/
+func GetGroupUser(group *SysGroup) []SysGroupMember {
+	var groupList []SysGroupMember
+	o := orm.NewOrm()
+	o.QueryTable("sys_group_member").Filter("group_id", group.Id).RelatedSel().All(&groupList)
+	return groupList
+}
+
+/*DelGroupUser 移除群成员*/
+func DelGroupUser(group *SysGroupMember) int64 {
+	o := orm.NewOrm()
+	formData := SysGroupMember{
+		Id: group.Id,
+	}
+	if num, err := o.Delete(&formData); err == nil {
+		return num
+	}
+	return 0
 }
