# swagger/swagger.json
@@ -393,6 +393,40 @@
                 }
             }
         },
+        "/group/delGroupUser": {
+            "post": {
+                "tags": [
+                    "group"
+                ],
+                "description": "移除群成员",
+                "operationId": "GroupController.移除群成员",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "data",
+                        "description": "请求参数",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.SysGroupMember"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.c_group.GroupResult"
+                        }
+                    },
+                    "404": {
+                        "description": "接口未找到"
+                    },
+                    "504": {
+                        "description": "接口超时"
+                    }
+                }
+            }
+        },
         "/group/getGroupAskList": {
             "post": {
                 "tags": [
@@ -495,13 +529,47 @@
                 }
             }
         },
+        "/group/getGroupUserList": {
+            "post": {
+                "tags": [
+                    "group"
+                ],
+                "description": "获取群成员",
+                "operationId": "GroupController.获取群成员",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "data",
+                        "description": "请求参数",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.SysGroupMember"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.c_group.GroupResult"
+                        }
+                    },
+                    "404": {
+                        "description": "接口未找到"
+                    },
+                    "504": {
+                        "description": "接口超时"
+                    }
+                }
+            }
+        },
         "/group/putGroupAsk": {
             "post": {
                 "tags": [
                     "group"
                 ],
-                "description": "获取群申请列表",
-                "operationId": "GroupController.获取群申请列表",
+                "description": "修改群申请",
+                "operationId": "GroupController.修改群申请",
                 "parameters": [
                     {
                         "in": "body",
@@ -1112,7 +1180,7 @@
             "title": "SysGroupMember",
             "required": [
                 "id",
-                "userId",
+                "user",
                 "group",
                 "createTime"
             ],
@@ -1132,10 +1200,9 @@
                     "type": "integer",
                     "format": "int64"
                 },
-                "userId": {
-                    "description": "成员id(用户id)",
-                    "type": "integer",
-                    "format": "int64"
+                "user": {
+                    "$ref": "#/definitions/models.SysUser",
+                    "description": "群组成员"
                 }
             }
         },
